# llm-router

./: .gitignore  Dockerfile  INTEGRATION.md  README.md  caddy.snippet  compose.ccx23.yaml  compose.yaml  config.example.yaml  pyproject.toml
.github/workflows/: image.yml
docs/: external-providers.md  fallback-cloudflare.md  fallback-patch.diff  nuc-cloudflared-fallback.compose.yaml
frontend/: README.md  api-contract.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts  style.css
frontend/src/api/: apps.ts  audit.ts  auth.ts  client.ts  dashboard.ts  logs.ts  mock.ts  models.ts  quotas.ts  routes.ts  settings.ts  spokes.ts  types.ts
frontend/src/components/layout/: AppShell.vue  Sidebar.vue  TopBar.vue
frontend/src/components/shared/: Badge.vue  (+9 more)
frontend/src/data/: providers.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  confirm.ts  theme.ts  toast.ts
frontend/src/utils/: chart.ts  format.ts
frontend/src/views/: DashboardView.vue  LoginView.vue
frontend/tests/: api.test.ts  chart.test.ts  components.test.ts  format.test.ts  providers.test.ts  setup.ts  stores.test.ts
src/llm_router/: __init__.py  _model_aggregation.py  config.py  deps.py  main.py  metrics.py  proxy.py  ratelimit.py  routes_admin.py  routes_ollama.py  routes_openai.py  runtime_config.py
src/llm_router/admin/: __init__.py  auth.py  db.py  models.py  router.py
src/llm_router/ui/: index.html
tests/: conftest.py  test_proxy_failover.py  test_smoke.py  test_vision_ocr_routes.py
(+38 files in other folders)
